# property-pipeline

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/propertypipeline/: __init__.py  cli.py
tests/: __init__.py  test_propertypipeline.py
